--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT = 3000
-DBUSERNAME = 'username'
-DBPASSWORD= 'passwordname'
-DB = 'dbname'
-CLUSTER = 'clustername'
+DBUSERNAME = 'marikaduhhanina'
+DBPASSWORD= '4ij4WSxK4uwGe7o3'
+DB = 'users'
+CLUSTER = 'cluster0.xmksqgf'
+
+# const dbURI = 'mongodb+srv://marikaduhhanina:4ij4WSxK4uwGe7o3@cluster0.xmksqgf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
