added css for the header
the other stuff is in index.html, but it can later be moved into the other file

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PORT = 3000
 DBUSERNAME = 'marikaduhhanina'
-DBPASSWORD= '4ij4WSxK4uwGe7o3'
+DBPASSWORD= 'Ge8#ujMU%m^'
 DB = 'users'
 CLUSTER = 'cluster0.xmksqgf'
 
-# const dbURI = 'mongodb+srv://marikaduhhanina:4ij4WSxK4uwGe7o3@cluster0.xmksqgf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+# const dbURI = 'mongodb+srv://marikaduhhanina:Ge8#ujMU%m^@cluster0.xmksqgf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+# user password for the database Ge8#ujMU%m^
