--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1"
   }
 }
