--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 5000
-DBUSERNAME = 'marikaduhhanina'
-DBPASSWORD= 'Ge8#ujMU%m^'
+DBUSERNAME = 'Edem'
+DBPASSWORD= 'zndTB5DbGTbciSSU'
 DB = 'users'
 CLUSTER = 'cluster0.xmksqgf'
 
