--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1",
+    "mongoose": "^8.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
