--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Paananen Sara-Sofia, Quashigah Edem, Duhhanina Marika",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
