--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
